add nginx config sample

--- a/env.example
+++ b/env.example
@@ -39,3 +39,11 @@ ELASTICSEARCH_CONFIG="./data/extra_config"
 ELASTICSEARCH_DATA="./data/elasticsearch"
 # kibana data folders base_path
 KIBANA_DATA="./data/kibana"
+
+# optional values for nginx conf
+#NGINX_NAME=<container_name>
+#NGINX_PORT=80
+#NGINX_PORT_SSL=80
+
+#NGINX_CONFIG=./nginx/conf.d
+#NGINX_LOG=./nginx/logs
